# x402_CLI

./: .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICK-START.md  README.md  package-lock.json  package.json
.github/: CI_TROUBLESHOOTING.md
.github/workflows/: test.yml
benchmarks/: wave1-baseline.md
bmad/_cfg/: files-manifest.csv  manifest.yaml
bmad/bmb/: config.yaml
bmad/bmm/: config.yaml
bmad/cis/: config.yaml
bmad/core/: config.yaml
crates/x402-cli/: Cargo.toml
crates/x402-cli/src/: cli.rs  config.rs  errors.rs  main.rs
crates/x402-cli/src/commands/: check.rs  config.rs  doctor.rs  examples.rs  init.rs  invoice.rs  mock.rs  mod.rs  policy.rs  test.rs  version.rs
crates/x402-cli/tests/: cli_integration.rs  mock_server_integration.rs
crates/x402-cli/tests/unit/: check_command_test.rs  doctor_command_test.rs
crates/x402-core/: Cargo.toml  build.rs
crates/x402-core/src/: lib.rs
crates/x402-core/src/policy/: codegen_parser.rs  codegen_types.rs  engine.rs  error.rs  mod.rs  parser.rs  rules.rs  runtime_types.rs  state.rs  types.rs  validator.rs
crates/x402-core/src/policy/codegen/: express.rs  express_new.rs  fastify.rs  mod.rs
crates/x402-core/src/testing/: assertions.rs  executor.rs  mod.rs  parser.rs  reporter.rs
crates/x402-core/tests/: concurrency.rs  property_tests.rs  security_tests.rs
crates/x402-domain/: Cargo.toml
crates/x402-domain/src/: amount.rs  conversions.rs  error.rs  lib.rs  pricing.rs  types.rs  validation.rs
crates/x402-mcp-server/: Cargo.toml  PHASE2_SUMMARY.md  PHASE3_COMPLETE.md  PHASE3_PERFORMANCE_SUMMARY.md  PHASE3_TESTING_SUMMARY.md  README.md  test_mcp.sh  test_policy_validate.sh  test_policy_validate2.sh  test_tools.sh  test_tools2.sh  test_tools3.sh
crates/x402-mcp-server/benches/: tool_benchmarks.rs
crates/x402-mcp-server/src/: lib.rs  main.rs  server.rs  types.rs
crates/x402-mcp-server/src/tools/: mock_server.rs  mod.rs  policy.rs  testing.rs
crates/x402-mcp-server/src/utils/: mod.rs
crates/x402-mcp-server/tests/: test_server.rs  test_tools_mock_server.rs  test_tools_policy.rs  test_tools_testing.rs
crates/x402-server/: Cargo.toml
crates/x402-server/src/: handlers.rs  lib.rs  lifecycle.rs  process.rs  server.rs
crates/x402-server/tests/: mock_server_integration.rs
crates/xtask/: Cargo.toml
docs/: ARCHITECTURE-ANALYSIS.md  EPIC-2-INTEGRATION-TEST-REPORT.md  EPIC-2-PRD-TRACEABILITY-MATRIX.md  EPIC-2-VALIDATION-REPORT.md  EPIC-3-COMPLETION-SUMMARY.md  EPIC-4-COMPLETION-SUMMARY.md  EPIC-4-DETAILED-CODE-REVIEW.md  EPIC-4-FINAL-REVIEW-SUMMARY.md  EPIC-7-COMPLETION-SUMMARY.md  PLATFORM-REQUIREMENTS.md  PRD.md  REAL-WORLD-TESTING-GUIDE.md  architecture.md  bmm-workflow-status.yaml  cli-reference.md  epic3-test-command-e2e-report.md  epic4-check-command-implementation.md  epic4-test-command-e2e-report.md  epic4-test-report.md  epics.md  final-validation-report-2025-11-09.md  implementation-readiness-report-2025-11-09.md  innovation-strategy-2025-11-04.md  limitations.md  mcp-server-guide.md  product-brief-x402-dev-2025-11-05.md  quickstart.md  sprint-status.yaml  stabilization-report.md  test-refactoring-plan.md  troubleshooting.md  wave1-enum-conversion-report.md  wave1-immediate-actions-complete.md  wave1-pricing-unification-summary.md
docs/development/: PRD.md  TEST_HELPERS_IMPLEMENTATION.md  TEST_REFACTORING_SUMMARY.md  epics.md
docs/stories/: 1-1-project-scaffolding-build-system.context.xml  1-1-project-scaffolding-build-system.md  1-2-cli-framework-integration.context.xml  1-2-cli-framework-integration.md  1-3-version-command-update-notifications.context.xml  1-3-version-command-update-notifications.md  1-4-configuration-management-system.context.xml  1-4-configuration-management-system.md  1-5-error-handling-infrastructure.context.xml  1-5-error-handling-infrastructure.md  1-6-help-system-documentation.md  1-7-init-command-project-setup.md  2-1-http-server-402-responses.md  2-2-configurable-pricing-rules.md  2-3-payment-verification-simulation.md  2-4-invoice-generation.md  2-5-zero-blockchain-dependency.md  2-6-lifecycle-management-COMPLETE.md  2-6-lifecycle-management.md
examples/ai-agent-policies/: Cargo.toml  README.md  agent.rs  middleware.js  policy.yaml
examples/cicd-testing/: .x402dev.yaml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  VALIDATION.md
examples/mcp-server-starter/: .gitignore  .x402dev.yaml  Cargo.toml  README.md
examples/policies/: README.md  comprehensive.yaml  conflict-example.yaml  rate-limit.yaml  simple-allowlist.yaml  spending-cap.yaml
hackathon-research/: README.md  developer-quick-start.md  hackathon-rules-and-tracks.md  market-landscape.md  sponsor-technologies.md  x402-protocol-specification.md
hackathon-research/guides/: integration-patterns.md  security-best-practices.md  solana-implementation.md  testing-and-monitoring.md  wallet-integration-guide.md
hackathon-research/reference/: blockchain-networks.md  code-repositories.md  facilitator-comparison.md  sdk-comparison.md
hackathon-research/tools/: README.md  ack-protocol-guide.md  corbits-faremeter-guide.md  crossmint-enterprise-guide.md  google-a2a-x402-guide.md  mcpay-tech-guide.md  native-example-guide.md  nexus-thirdweb-guide.md  payai-network-guide.md  x402-mcp-guide.md  x402scan-explorer-guide.md
src/: main.rs
tests/: README.md  TEST_REFACTORING_SUMMARY.md  check_command_tests.rs  doctor_command_tests.rs  epic4_check_command_spec.md  epic4_doctor_command_spec.md  epic4_integration_tests.rs  epic4_test_framework.rs  example-suite.yaml  integration_test_epic2.sh
tests/common/: mod.rs
tests/e2e/: payment_flow.rs
tests/fixtures/: configs.rs  invoices.rs  mod.rs  policies.rs
tests/helpers/: README.md  assertions.rs  cli_runner.rs  mock_server.rs  mod.rs
tests/integration/: check_workflow_test.rs  cli_integration_test.rs  doctor_workflow_test.rs  mod.rs  test_helpers_integration.rs
tests/property/: README.md  invoice_properties_test.proptest-regressions  invoice_properties_test.rs  (+1 more)
ts/: package-lock.json  package.json  tsup.config.ts
(+57 files in other folders)
