[package]
name = "mcp-server-starter"
version = "1.0.0"
edition = "2021"
authors = ["x402-dev contributors"]
description = "Minimal MCP server with x402 payment integration"
license = "MIT"

[dependencies]
# HTTP server framework
actix-web = "4.5"

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
# Optimize for small binary size and fast compilation
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
tempfile = "3.23.0"
