[package]
name = "x402-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "x402-dev"
path = "src/main.rs"

[dependencies]
x402-core = { path = "../x402-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
directories = { workspace = true }
semver = { workspace = true }
colored = { workspace = true }
