[package]
name = "x402-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "x402-dev"
path = "src/main.rs"

[dependencies]
x402-core = { path = "../x402-core" }
x402-server = { path = "../x402-server" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
directories = { workspace = true }
semver = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
actix-web = { workspace = true }
actix-cors = { workspace = true }
