[package]
name = "x402-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "x402_core"
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
humantime-serde = "1.1.1"

# Serialization and YAML parsing (FR-5.1)
serde = { workspace = true }
serde_json.workspace = true
serde_yaml = { workspace = true }

# Validation support
thiserror = "1.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
