[package]
name = "x402-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["x402-dev Team"]
description = "MCP server for x402-dev payment protocol testing toolkit"
license = "MIT"
repository = "https://github.com/x402-dev/mcp-server"
keywords = ["mcp", "x402", "payment", "testing", "solana"]
categories = ["development-tools", "testing"]

[[bin]]
name = "x402-mcp-server"
path = "src/main.rs"

[dependencies]
# MCP Protocol
rmcp = { version = "0.8", features = ["server", "transport-io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
schemars = { version = "1.0", features = ["derive"] }

# Direct x402-dev library integration (no subprocess overhead)
x402-core = { path = "../x402-core" }
x402-server = { path = "../x402-server" }
x402-domain = { path = "../x402-domain" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
proptest = "1.0"

[[bench]]
name = "tool_benchmarks"
harness = false

# Note: Profile configuration is inherited from workspace root Cargo.toml
# The workspace uses: opt-level="z", lto=true, codegen-units=1, strip=true
