[package]
name = "x402-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework
actix-web = { workspace = true }
actix-cors = { workspace = true }
actix-rt = { workspace = true }

# Process management
sysinfo = { workspace = true }
nix = { workspace = true }
fs2 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = "1.0"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time handling
chrono = { workspace = true }

# Platform-specific directories
directories = { workspace = true }

# Core functionality
x402-core = { path = "../x402-core" }

# Async runtime
tokio = { workspace = true }

# UUID generation
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
